Trying to add the github repo as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "frontend"]
 	path = frontend
 	url = https://github.com/itsyashsahu/Signopedia.git
+[submodule "frontend1"]
+	path = frontend1
+	url = https://github.com/itsyashsahu/Signopedia
