--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = frontend
 	url = https://github.com/itsyashsahu/Signopedia
 	branch = main
+[submodule "backend"]
+	path = backend
+	url = https://github.com/vanshksharma/Signopedia-Deployment
+	branch = main
